--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <section>
         <header>
-            <img src="profile.JPEG" alt="Profile Picture">
+            <img src="profile.JPEG" alt="Profile Picture" height="400" width="320">
             <div>
                 <h1>Patrick Tyrrell</h1>
                 <p>Sydney Australia</p>
@@ -33,6 +33,5 @@
             &copy;Patrick Tyrrell 2025
         </p>
     </footer>
-    
 </body>
 </html>
