Beggining to format the projects list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="horizontal-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -16,7 +16,7 @@
     </nav>
     <section>
         <header>
-            <img src="profile.JPEG" alt="Profile Picture" height="400" width="320">
+            <img src="profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
             <div>
                 <h1>Patrick Tyrrell</h1>
                 <p>Sydney Australia</p>
