changed project list style, Mape project list links to my github repos, brought colesSC file into folder

--- a/project.html
+++ b/project.html
@@ -25,9 +25,10 @@
         <h2>About Me</h2>
         <section  class="projects-list">
             <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
+                <li><a href="https://github.com/paddyTea/Coles_Srape">Coles_Srape</a>
+                    </li>
+                <li><a href="https://github.com/paddyTea/Portfolio">Portfolio</a></li>
+                <li><a href="https://github.com/paddyTea/Google-Calendar-Whoop-Sleep">Google-Calendar-Whoop-Sleep</a></li>
             </ul>
         </section>
     </section>
@@ -38,3 +39,5 @@
     </footer>
 </body>
 </html>
+
+
