Added flex and borders around content on home, started images. fixed nav bar to be presentable, aligned text to profile picture home page

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Patrick Tyrrell Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="backgroundColor">
     <nav>
         <ul class="horizontal-list">
             <li><a href="index.html">Home</a></li>
@@ -16,7 +16,7 @@
     </nav>
     <section>
         <header>
-            <img src="profile.JPEG" alt="Profile Picture" height="450" width="320" class="profile-photo">
+            <img src="Assets/profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
             <div>
                 <h1>Patrick Tyrrell</h1>
                 <p>Sydney Australia</p>
@@ -25,15 +25,15 @@
         </header>
         <h2>GitHub</h2>
         <section>
-            <a href="https://github.com/paddyTea"> <img src="github.png" alt="Github Logo" style="width: 42px;height:42;"></a>
+            <a href="https://github.com/paddyTea"> <img src="./Assets/github.png" alt="Github Logo"></a>
         </section>
         <h2>Email</h2>
         <section>
-            <a href="p.tyrrell2001@gmail.com"> <img src="mail.jpg" alt="Mail Icon" style="width: 42px;height:42;"></a>
+            <a href="p.tyrrell2001@gmail.com"> <img src="./Assets/mail.jpg" alt="Mail Icon"></a>
         </section>
         <h2>Linkedin</h2>
         <section>
-            <a href="www.linkedin.com/in/pt-patricktyrrell"> <img src="linkedin.webp" alt="Mail Icon" style="width: 42px;height:42;"></a>
+            <a href="www.linkedin.com/in/pt-patricktyrrell"> <img src="./Assets/linkedin.webp" alt="Mail Icon"></a>
         </section>
     </section>
     <footer>
