--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Patrick Tyrrell Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="backgroundColor">
     <nav>
         <ul class="horizontal-list">
             <li><a href="index.html">Home</a></li>
@@ -14,10 +14,10 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section>
-        <header>
-            <img src="profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
-            <div>
+    <section class="Home_Container border" >
+        <header class="border">
+            <img src="./Assets/profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
+            <div class="border">
                 <h1>Patrick Tyrrell</h1>
                 <p>Sydney Australia</p>
                 <p>He/Him</p>
@@ -25,7 +25,12 @@
         </header>
         <h2>About Me</h2>
         <section>
-            <p>I am a Sydney-based software developer. I have a particular interest in learning new ways to problem solve, especially when it comes to code, as there is a constant opportunity to learn and develop my skills. I am a recent graduate of Bachelors of Information Technology majoring in software technologies from Macquarie University and since then I have continued expanding my skillset through various courses on Coursera and Microsoft Learn. Technical Skills:- Java- Python- React- Flutter- HTML- CSS- C- GitHub- Git- MySQL- RESTful API'sMy passion for problem-solving expands to other domains of my life, including sewing and carpentry. Finding ways to be more invested and have a better understanding of the world around us. In doing so, I also find it very important to invest time daily into my physical and mental health by going to the gym. I can also be found at networking events throughout Sydney as I enjoy being an active part of the community. I am ready to find a team to grow with that values both the human and technical side of development. </p>
+            <p>I am a Sydney-based software developer. I have a particular interest in learning new ways to problem solve, especially when it comes to code, as there is a constant opportunity to learn and develop my skills. I am a recent graduate of Bachelors of 
+                Information Technology majoring in software technologies from Macquarie University and since then I have continued expanding my skillset through various courses on Coursera and Microsoft Learn. 
+                Technical Skills:- Java- Python- React- Flutter- HTML- CSS- C- GitHub- Git- MySQL- RESTful API's. 
+                My passion for problem-solving expands to other domains of my life, including sewing and carpentry. 
+                Finding ways to be more invested and have a better understanding of the world around us. In doing so, I also find it very important to invest time daily into my physical and mental health by going to the gym.
+                 I can also be found at networking events throughout Sydney as I enjoy being an active part of the community. I am ready to find a team to grow with that values both the human and technical side of development. </p>
         </section>
     </section>
     <footer>
