--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <title>Patrick Tyrrell Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="backgroundColor">
     <nav>
         <ul class="horizontal-list">
             <li><a href="index.html">Home</a></li>
@@ -22,13 +22,27 @@
             </div>
         </header>
 
-        <h2>About Me</h2>
         <section  class="projects-list">
             <ul>
-                <li><a href="https://github.com/paddyTea/Coles_Srape">Coles_Srape</a>
-                    </li>
-                <li><a href="https://github.com/paddyTea/Portfolio">Portfolio</a></li>
-                <li><a href="https://github.com/paddyTea/Google-Calendar-Whoop-Sleep">Google-Calendar-Whoop-Sleep</a></li>
+                <li>
+                    <a href="https://github.com/paddyTea/Coles_Srape"><img src="./Assets/coles.png" alt="Coles Photo"></a>
+                    <h3>Coles Scrape</h3>
+                    <p>Use a program to scape all the products of off coles website, take the nutrition informaiton and be able to catergorise it</p>
+                </li>
+                <li>
+                    <a href="https://github.com/paddyTea/Portfolio">Portfolio</a>
+                    <p>This is my first attempt at a portfolio, here I am trying to show the work I have done on tope of 
+                        my passions, interest and who I am as a person.
+                    </p>
+                </li>
+                <li>
+                    <a href="https://github.com/paddyTea/Google-Calendar-Whoop-Sleep">Google-Calendar-Whoop-Sleep</a>
+                    <p>A script that imports my sleep from the whoop servers and automatically creates it as an event in my google calendar</p>
+                </li>
+                <li>
+                    <a href="https://github.com/paddyTea/TripleM50K">TripleM50K</a>
+                    <p>I am generating code to play Triple M radio stations 50k prize game. If a song is repeated between 9am-5pm from Monday to Friday and you catch it. You can call to tell them you've caught it and enter a prize pool for $50k</p>
+                </li>
             </ul>
         </section>
     </section>
