replaced and resized images

--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,15 @@
         </header>
         <h2>GitHub</h2>
         <section>
-            <a href="https://github.com/paddyTea"> <img src="./Assets/github.png" alt="Github Logo"></a>
+            <a href="https://github.com/paddyTea"> <img class="contact_image" src="./Assets/github.png" alt="Github Logo"></a>
         </section>
         <h2>Email</h2>
         <section>
-            <a href="p.tyrrell2001@gmail.com"> <img src="./Assets/mail.jpg" alt="Mail Icon"></a>
+            <a href="p.tyrrell2001@gmail.com"> <img class="contact_image" src="./Assets/mail.jpg" alt="Mail Icon"></a>
         </section>
         <h2>Linkedin</h2>
         <section>
-            <a href="www.linkedin.com/in/pt-patricktyrrell"> <img src="./Assets/linkedin.webp" alt="Mail Icon"></a>
+            <a href="www.linkedin.com/in/pt-patricktyrrell"> <img class="contact_image" src="./Assets/linkedin.webp" alt="Mail Icon"></a>
         </section>
     </section>
     <footer>
