Changed format of contact and project

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section>
+    <section >
+        <h1>How to contact me</h1>
+        <section class="contact_container">
         <header>
             <img src="Assets/profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
             <div>
@@ -23,18 +25,21 @@
                 <p>He/Him</p>
             </div>
         </header>
-        <h2>GitHub</h2>
+        <div>
         <section>
+            <h2>GitHub</h2>
             <a href="https://github.com/paddyTea"> <img class="contact_image" src="./Assets/github.png" alt="Github Logo"></a>
         </section>
-        <h2>Email</h2>
         <section>
+             <h2>Email</h2>
             <a href="p.tyrrell2001@gmail.com"> <img class="contact_image" src="./Assets/mail.jpg" alt="Mail Icon"></a>
         </section>
-        <h2>Linkedin</h2>
         <section>
+             <h2>Linkedin</h2>
             <a href="www.linkedin.com/in/pt-patricktyrrell"> <img class="contact_image" src="./Assets/linkedin.webp" alt="Mail Icon"></a>
         </section>
+        </div>
+    </section>
     </section>
     <footer>
         <p>
