--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <!-- introduce body tag for consisent borders -->
     <section class="Home_Container border" >
         <header class="border">
             <img src="./Assets/profile.JPEG" alt="Profile Picture" height="400" width="300" class="profile-photo">
