--- a/project.html
+++ b/project.html
@@ -25,21 +25,21 @@
         <section  class="projects-list">
             <ul>
                 <li>
-                    <a href="https://github.com/paddyTea/Coles_Srape"><img class="projectimages" src="./Assets/coles.png" alt="Coles Photo"></a>                    <h3>Coles Scrape</h3>
+                    <a href="https://github.com/paddyTea/Coles_Srape" target="_blank"><img class="projectimages" src="./Assets/coles.png" alt="Coles Photo"></a>                    <h3>Coles Scrape</h3>
                     <p>Use a program to scape all the products of off coles website, take the nutrition informaiton and be able to catergorise it</p>
                 </li>
                 <li>
-                    <a href="https://github.com/paddyTea/Portfolio"><img class="projectimages" src="./Assets/portfolio_wireframe.png" alt="Figma Portfolio Wireframe"></a>
+                    <a href="https://github.com/paddyTea/Portfolio" target="_blank"><img class="projectimages" src="./Assets/portfolio_wireframe.png" alt="Figma Portfolio Wireframe"></a>
                     <p>This is my first attempt at a portfolio, here I am trying to show the work I have done on tope of 
                         my passions, interest and who I am as a person.
                     </p>
                 </li>
                 <li>
-                    <a href="https://github.com/paddyTea/Google-Calendar-Whoop-Sleep"><img class="projectimages"src="./Assets/calendarsc.png" alt="Google Calendar ScreenShot"></a>
+                    <a href="https://github.com/paddyTea/Google-Calendar-Whoop-Sleep" target="_blank"><img class="projectimages"src="./Assets/calendarsc.png" alt="Google Calendar ScreenShot"></a>
                     <p>A script that imports my sleep from the whoop servers and automatically creates it as an event in my google calendar</p>
                 </li>
                 <li>
-                    <a href="https://github.com/paddyTea/TripleM50K"><img class="projectimages"src="./Assets/triplem.png" alt="TripleM No Repeat Workday"></a>
+                    <a href="https://github.com/paddyTea/TripleM50K" target="_blank"><img class="projectimages"src="./Assets/triplem.png" alt="TripleM No Repeat Workday"></a>
                     <p>I am generating code to play Triple M radio stations 50k prize game. If a song is repeated between 9am-5pm from Monday to Friday and you catch it. You can call to tell them you've caught it and enter a prize pool for $50k</p>
                     <!-- <h5>Languages</h5>
                     <ul>
